fix: dark mode in new components

--- a/public/assets/css/colors/dark.css
+++ b/public/assets/css/colors/dark.css
@@ -22,7 +22,7 @@
         --accent-yellow-text-color: #221d15;
         --accent-blue-bg-color: #303b46;
         --accent-blue-bg-color-vivid: #3c7bc2;
-        --accent-blue-bg-color-light: #d3dbe4;
+        --accent-blue-bg-color-light: #2b2f33;
         --accent-blue-bg-color-deep: #b2bbc5;
         --accent-blue-text-color: #c2cdd8;
         --accent-brown-bg-color: #343029;
@@ -30,16 +30,20 @@
         --accent-brown-bg-color-light: #f1e3cd;
         --accent-brown-bg-color-deep: #c5bdaf;
         --accent-brown-text-color: #D8D0C2;
-        --accent-green-bg-color: #2c382c;
-        --accent-green-bg-color-vivid: #3cc748;
-        --accent-green-bg-color-light: #def7e0;
-        --accent-green-bg-color-deep: #2a362a;
+        --accent-green-bg-color: #bcdcbd;
+        --accent-green-bg-color-vivid: #00BE6C;
+        --accent-green-bg-color-light: #2a3d32;
+        --accent-green-bg-color-deep: #b5cab6;
         --accent-green-text-color: #809d88;
+        --accent-pink-bg-color: #ffc7eb;
+        --accent-pink-bg-color-vivid: #FF00BF;
+        --accent-pink-bg-color-light: #392d35;
+        --accent-pink-bg-color-deep: #b99daf;
         --accent-purple-bg-color: #2f1e40;
         --accent-purple-bg-color-vivid: #7c3cc7;
         --accent-purple-bg-color-light: #e4d3f1;
         --accent-purple-bg-color-deep: #2a1f36;
-        --accent-purple-text-color: #cdc2d8;
+        --accent-purple-text-color: #2f1e40;
         --accent-red-bg-color: #3c2c2c;
         --accent-red-bg-color-vivid: #c73c3c;
         --accent-red-bg-color-light: #f1d3d3;
